# bibtexupdater

./: .gitignore  .latexmkrc.example  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  MANIFEST.in  README.md  bib_utils.py  bibtex_updater.py  filter_bibliography.py  filter_bibliography_minimal.py  latexmkrc.example  pyproject.toml  reference_fact_checker.py  requirements-dev.txt  requirements.txt  zotero_updater.py
.claude/: settings.local.json
.github/workflows/: ci.yml  publish.yml  reusable-bib-update.yml  update-and-filter-bibliography.yml  update-bibliography.yml
assets/: fact-checker.demo.bib  fact-checker.out  fact-checker.tape
benchmarks/: HALLMARK.md  hallmark_unreleased.json  hallmark_v1_2_0.json
docs/: ARXIV_DEPLOYMENT_ANALYSIS.md  BIBTEX_UPDATER.md  CHROME_EXTENSION_FEASIBILITY.md  FILTER_BIBLIOGRAPHY.md  KNOWN_LEAKS.md  LANDSCAPE.md  REFERENCE_FACT_CHECKER.md  ZOTERO_UPDATER.md
docs/superpowers/specs/: 2026-06-03-openreview-acceptance-signal-design.md
examples/: README.md  latexmkrc
examples/obsidian-zotero-sync/: README.md  zotero-bulk-sync.md  zotero-enrich-keywords.md  zotero-paper-template.md  zotero-sync.md
examples/workflows/: filter-bibliography.yml  update-and-filter-bibliography.yml  update-bibliography.yml  validate-references.yml
scripts/: _compare_hallmark_runs.py  bibtex-x  create_before_after_animation.py  create_fact_checker_gif.py  create_obsidian_keywords_gif.py  create_pipeline_gif.py  create_zotero_animation.py  eval_hallmark.py  generate_accuracy_figure_v1_1_0.py  generate_accuracy_figure_v1_2_0.py  render_hallmark_report.py
src/bibtex_updater/: __init__.py  calibration.py  chain.py  fact_checker.py  filter.py  matching.py  obsidian_keywords.py  sources.py  updater.py  utils.py  zotero.py  zotero_sync.py
src/bibtex_updater/cli/: __init__.py  fact_checker_cli.py  filter_cli.py  obsidian_keywords_cli.py  updater_cli.py  zotero_cli.py  zotero_organizer_cli.py
src/bibtex_updater/organizer/: __init__.py  cache.py  classifier.py  collection_manager.py  config.py  main.py  taxonomy.py
src/bibtex_updater/organizer/backends/: __init__.py  base.py  claude_backend.py  embedding_backend.py  openai_backend.py
tests/: __init__.py  conftest.py  test_acl_anthology.py  test_alphabetized_given_name_fps.py  test_arxiv_datacite_doi.py  test_arxiv_id_lookup.py  test_author_truncation_default.py  test_batch_unified_plumbing.py  test_bib_loader.py  test_bib_utils.py  test_calibration.py  test_cascade_sources.py  test_chain.py  test_circuit_breaker.py  test_conference_exact_year.py  test_corr_and_retry_fixes.py  test_cross_source_venue.py  test_crossref_prefetch.py  test_detector.py  test_doi_consistency.py  test_entry_fields.py  test_europepmc.py  test_fact_checker.py  test_fast_paths.py  test_field_checker.py  test_filter_bibliography.py  test_filter_bibliography_minimal.py  test_http_cache.py  test_id_anchored_field_mismatch.py  test_integration.py  test_latex_accents.py  test_matching.py  test_metamorphic_symmetry.py  test_nonexistent_venue.py  test_obsidian_keywords.py  test_openalex.py  test_openreview.py  test_openreview_acceptance.py  test_openreview_resolver_stage.py  test_openreview_unpublished_flag.py  (+23 more)
tests/fixtures/: main.tex  sample.bib
tests/fixtures/subdir/: appendix.tex
tests/test_organizer/: __init__.py  test_backends.py  test_classifier_base.py  test_collection_manager.py  test_integration.py
